force-app/main/default/objects/InvoiceLineItem__c/fields/Amount__c.field-meta.xml
<CustomField>
    <fullName>Amount__c</fullName>
    <description>Amount for this line item</description>
    <label>Amount</label>
    <precision>14</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>