force-app/main/default/objects/InvoiceLineItem__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Description of the line item (e.g., "Detention hours 2.5 @ $50/hr")</description>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>