force-app/main/default/objects/InvoiceLineItem__c/fields/Invoice__c.field-meta.xml
<CustomField>
    <fullName>Invoice__c</fullName>
    <description>Master-Detail relationship to Invoice</description>
    <label>Invoice</label>
    <referenceTo>Invoice__c</referenceTo>
    <relationshipLabel>Line Items</relationshipLabel>
    <relationshipName>LineItems</relationshipName>
    <type>MasterDetail</type>
</CustomField>