force-app/main/default/objects/InvoiceLineItem__c/fields/Line_Item_Type__c.field-meta.xml
<CustomField>
    <fullName>Line_Item_Type__c</fullName>
    <description>Type of charge (base freight, fuel surcharge, detention, hazmat, oversize, tax)</description>
    <label>Line Item Type</label>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Base_Freight</fullName><default>false</default><label>Base Freight</label></value>
            <value><fullName>Fuel_Surcharge</fullName><default>false</default><label>Fuel Surcharge</label></value>
            <value><fullName>Detention</fullName><default>false</default><label>Detention</label></value>
            <value><fullName>Hazmat</fullName><default>false</default><label>Hazmat</label></value>
            <value><fullName>Oversize</fullName><default>false</default><label>Oversize</label></value>
            <value><fullName>Layover</fullName><default>false</default><label>Layover</label></value>
            <value><fullName>Tax</fullName><default>false</default><label>Tax</label></value>
            <value><fullName>Other</fullName><default>false</default><label>Other</label></value>
        </valueSetDefinition>
    </valueSet>
    <required>true</required>
    <type>Picklist</type>
</CustomField>